--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -13,9 +13,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
     - name: Install rust
       uses: ./.github/actions/rust
       with:
@@ -38,6 +35,7 @@ runs:
         rust-version: ${{ inputs.rust-version }}
 
     - name: Unit tests
+      shell: bash
       run: cargo test
 
     - name: Install node
@@ -47,6 +45,7 @@ runs:
         cache: yarn
 
     - name: Build client
+      shell: bash
       run: |
         cd npm-client
         npm install
@@ -54,6 +53,7 @@ runs:
         cd ..
 
     - name: Build admin client
+      shell: bash
       run: |
         cd npm-admin-client
         npm install
@@ -61,6 +61,7 @@ runs:
         cd ..
 
     - name: Anchor tests
+      shell: bash
       run: |
         yarn install
         yarn test
