--- a/.github/workflows/push-develop-build-test-upgrade.yml
+++ b/.github/workflows/push-develop-build-test-upgrade.yml
@@ -6,7 +6,7 @@ on:
       - develop
 
 jobs:
-  build-test-upgrade:
+  build-test:
     environment: devnet-edge
     runs-on: ubuntu-latest
     steps:
@@ -18,6 +18,22 @@ jobs:
         with:
           rust-version: 1.72.1
           solana-version: v1.14.16
+          anchor-version: 0.27.0
+
+  build-verifiable-upgrade:
+    needs: build-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: ./.github/actions/anchor
+        with:
+          version: 0.27.0
+          rust-version: 1.72.1
+
+      - uses: ./.github/actions/build-protocol-verifiable
+        with:
           anchor-version: 0.27.0
 
       - name: Create upgrade buffers
