--- a/.github/workflows/push-develop-build-test-upgrade.yml
+++ b/.github/workflows/push-develop-build-test-upgrade.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - uses: ./.github/actions/solana
+        with:
+          version: v1.14.16
+
       - uses: ./.github/actions/anchor
         with:
           version: 0.27.0
